<resources>
    <string name="app_name">PakaiMasker</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="login">MASUK DENGAN GOOGLE</string>
    <string name="todo">TODO</string>
    <string name="_100">100%</string>
    <string name="text_status">Penggunaan Masker Hari Ini</string>
    <string name="status">Sedang memperoleh…</string>
    <string name="hi">Hi,</string>
    <string name="name">Nama</string>
    <string name="starting">Memulai…</string>
    <string name="monitoroff">Monitoring mati</string>
    <string name="caption">Mari mulai monitoring untuk melawan virus corona</string>
    <string name="statusYes">Terimakasih telah menggunakan masker. Tetap patuh pada protokol kesehatan dan stay safe.</string>
    <string name="statusNo">Anda tidak menggunakan masker. Silakan Gunakan Masker, atau Tandai lokasi Anda saat ini sebagai Safezone.</string>
    <string name="statusOut">Anda diluar waktu monitoring yang dijadwalkan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">pakaimasker@gmail.com</string>
    <string name="pengaturan">PENGATURAN</string>
    <string name="atur_jadwal_monitoring">Atur Jadwal Monitoring</string>
    <string name="interval_deteksi">Interval Deteksi</string>
    <string name="atur_zona_aman">Atur Zona Aman</string>
    <string name="pemberitahuan">Pemberitahuan</string>
    <string name="ganti_bahasa">Ganti Bahasa</string>
    <string name="tentang">TENTANG</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="keluar">Keluar</string>
    <string name="_17_mei_2021">17 Mei 2021</string>
    <string name="ON">MULAI MONITORING</string>
    <string name="OFF">HENTIKAN MONITORING</string>
    <string name="apa_itu_pakaimasker">Apa itu PakaiMasker ?</string>
    <string name="desdua">PakaiMasker adalah aplikasi mobile yang bertujuan untuk memantau seberapa tertib kita menggunakan masker dengan mengambil figur wajah setiap periode waktu</string>
    <string name="coba_sekarang">Coba Sekarang !!</string>
    <string name="desempat">Siap untuk tertib menggunakan masker? Coba PakaiMasker sekarang!</string>
    <string name="hello">HALO!</string>
    <string name="dessatu">Selamat datang di aplikasi PakaiMasker, yuk ketahui seberapa tertibnya kamu memakai masker</string>
    <string name="fitur_pakaimasker">Fitur PakaiMasker</string>
    <string name="destiga">PakaiMasker menawarkan fitur pendeteksian masker, monitoring, rangkuman harian dan juga mode safe place</string>
    <string name="connect">Pasangkan Dengan Perangkat Lain</string>
    <string name="interval1">Tiap 5 detik</string>
    <string name="interval2">Tiap 10 detik</string>
    <string name="interval3">Tiap 15 detik</string>
    <string name="notif_on">Pemberitahuan Dinyalakan</string>
    <string name="notif_off">Pemberitahuan Dimatikan</string>
    <string name="dialog_jadwal_judul">Atur Jadwal</string>
    <string name="dialog_jadwal_start">Set Jam Mulai</string>
    <string name="dialog_jadwal_end">Set Jam Selesai</string>
    <string name="dialog_jadwal_set">Set Jadwal</string>
    <string name="dialog_jadwal_unset">Reset Jadwal</string>
    <string name="dialog_jadwal_time">Set Jam</string>
    <string name="Unsure">Unsure</string>
    <string name="No_Face">No Face</string>
    <string name="Masked">Masked</string>
    <string name="Unmasked">Unmasked</string>
    <string name="OutSchedule">Di Luar Jadwal</string>
    <string name="Last_Status">Status Terakhir : </string>
    <string name="at">pada</string>
    <string name="insafezone"> Di SafeZone</string>
    <string name="safe">Anda berada di zona aman (</string>
    <string name="safezo"> meter dari </string>
    <string name="dialog_pasangkan_perangkat">Pasangkan Perangkat</string>
    <string name="dialog_add">Masukkan Kode Perangkat</string>
    <string name="dialog_addd">Tambahkan</string>
    <string name="homeFragment.tv_result.1">dari</string>
    <string name="homeFragment.tv_result.2">scan terdeteksi menggunakan masker</string>
    <string name="homeFragment.tv_result.3">Belum menemukan data scan</string>
    <string name="homeFragment.tv_result.4">Terjadi kesalahan saat memperoleh data</string>
    <string name="homeFragment.deviceCode.1">Kode Perangkat Tidak Ditemukan</string>
    <string name="homeFragment.deviceCode.2">Kode Perangkat Berhasil Ditambahkan</string>
    <string name="logout">Apakah anda mau keluar?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="start_monitoring">Monitoring Dimulai Saat</string>
    <string name="end_monitoring">Monitoring Diakhiri Saat</string>
    <string name="schedule.1">set jam monitoring pada</string>
    <string name="schedule.2">hingga</string>
    <string name="gps.must.active">GPS harus aktif</string>
    <string name="monitoring_is_off">Monitoring Mati</string>
</resources>