<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"
            android:textFontWeight="600"
            android:padding="15dp"
            android:text="@string/title_history"
            android:textColor="@color/black"
            android:textSize="26sp"
            tools:targetApi="p" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_stroke">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_stroke"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_persen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20px"
                    android:fontFamily="@font/poppins_bold"
                    android:text="~ %"
                    android:textColor="@color/black"
                    android:textFontWeight="600"
                    android:textSize="36sp"
                    tools:targetApi="p" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:textFontWeight="600"
                        android:text="@string/text_status"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        tools:targetApi="p" />

                    <TextView
                        android:id="@+id/tv_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/status"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/vie_bg"
            android:padding="10dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_history" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>